// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package sensors;

// Interface exported by the server.
service Sensors {
  // A server-to-client streaming RPC.
  //
  // Obtains the frequency we want data to be published at. Results are
  // streamed rather than returned at once (e.g. in a response message with a
  // repeated field
  rpc ListData(SensorsRequest) returns (stream SensorData) {}
}

message SensorsRequest {
  uint32 stream_frequency = 1;
}


message Pose {
  double x = 1;
  double y = 2;
  double theta = 3;
}

message LaserScan {
  double start_angle = 1;
  double angular_resolution = 2;
  double maximum_range = 3;
  repeated double ranges = 4;
}

message SensorData {
  LaserScan laser = 1;
  Pose pose = 2;
  double timestamp = 3;
}
